[tool.poetry]
name = "idealdevotedbrain"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
selenium-wire = "^4.2.3"
jsonpickle = "^2.0.0"
simplejson = "^3.17.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
